--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-md-6 text-center">
                 <div class="card" style="width: 18rem;">
                     <div class="card-header">
@@ -80,6 +80,10 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>Aluno:Hyonas Gabriel</p>
+        <p>Projeto de recuperação - Tópicos Especiais em Informática</p> 
+    </footer>
 </body>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
